# proc-macro-workshop

./: .gitignore  Cargo.toml  main.rs
bitfield/: Cargo.toml
bitfield/byte/: Cargo.toml
bitfield/byte/src/: lib.rs
bitfield/impl/: Cargo.toml
bitfield/impl/src/: lib.rs
bitfield/src/: lib.rs
builder/src/: lib.rs
debug/: Cargo.toml
debug/src/: lib.rs
eseq/: Cargo.toml
eseq/src/: lib.rs
seq/: Cargo.toml
seq/src/: lib.rs
seq/tests/: 06-make-work-in-function.rs  07-init-array.rs  10-interaction-with-macrorules.rs  progress.rs
sorted/: Cargo.toml
sorted/src/: lib.rs
