[package]
name = "proc-macro-workshop"
version = "0.0.0"
edition = "2018"
publish = false

[workspace]

[[bin]]
name = "workshop"
path = "main.rs"

[dependencies]
bitfield = { path = "bitfield" }
derive_builder = { path = "builder" }
derive_debug = { path = "debug" }
seq = { path = "seq" }
eseq = { path = "eseq" }
sorted = { path = "sorted" }
proc-macro-hack = "0.5.11"

