[package]
name = "byte"
version = "0.1.0"
authors = ["nooberfsh <nooberfsh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = {version = "1.0", features = ["default", "extra-traits", "full", "fold"]}
quote = "1.0"
proc-macro2 = "1.0"
proc-macro-hack = "0.5.11"
itertools = "0.8.2"
